--- a/site/css/Main.css
+++ b/site/css/Main.css
@@ -1,4 +1,5 @@
 body {
+	background-color: cornflowerblue;
 	height: 100%;
 	margin: 0;
 	text-align: center;
@@ -6,12 +7,12 @@ body {
 }
 
 h1 {
-	font-size: 32px;
+	font-size: 50px;
   font-family: Palatino, 'Palatino Linotype', serif;
 }
 
 h2 {
-	font-size: 32px;
+	font-size: 50px;
 }
 
 
