--- a/site/css/Main.css
+++ b/site/css/Main.css
@@ -19,6 +19,34 @@ h2 {
 p {
 }
 
+/*Table resize based on screen size*/
+  table.format td {
+ padding: 3px 10px; 
+ text-align: center;
+ color: #333;
+ font-size:10pt;
+}
+
+@media screen and (max-width:480px){
+ table.format td {
+ font-size:16pt; 
+ }
+}
+
+
+@media screen and (max-width:1024px){
+ table.format td {
+ font-size:12pt; 
+ }
+}
+
+
+@media screen and (max-width:1920px){
+ table.format td {
+ font-size:10pt; 
+ }
+}
+
 #scoreboard{
 	background-color: #3366ff;
 	color: white;
