--- a/site/css/draft.css
+++ b/site/css/draft.css
@@ -44,6 +44,9 @@
     background-color:black;
     color:white;
 }
+.drafted{
+    text-decoration: line-through;
+}
 
 #teams_display{
     float:left;
