--- a/site/css/draft.css
+++ b/site/css/draft.css
@@ -20,8 +20,7 @@
     float:left;
     height:95%;
     width:25%;
-    overflow: scroll;
-    
+    overflow: scroll;   
 }
 
 #player_list_table, td, th{
@@ -56,9 +55,11 @@
     overflow:scroll;
 }
 .team_board{
+    margin: 20px;
     float:left;
-    width:25%;
+    width:15%;
     border-collapse: collapse;
+    
 }
 .postition_td{
     width:10%;
