Drafthelper.html and script.js updated

--- a/site/css/Main.css
+++ b/site/css/Main.css
@@ -68,3 +68,23 @@ p {
 #availablePlayers{
 	float: right;
 }
+
+.container .box {
+  /*float: left;
+  width: 150px;
+  margin: 20px;*/
+}
+
+.container .box .top {
+  padding: 12px;
+  background-color: blue;
+  color: white;
+  cursor: pointer;
+}
+
+.container .box .bottom {
+  padding: 12px;
+  background-color: red;
+  color: white;
+  display: none;
+}
