--- a/site/css/draft.css
+++ b/site/css/draft.css
@@ -1,3 +1,7 @@
+body{
+    font-family: PT Sans Narrow;
+}
+
 #outer_limits{
     max-height:100vh;
     max-width:100vw;
@@ -9,12 +13,7 @@
     width:98%;
     
 }
-/*draft grid was a bad idea and probly has to go =(
-/*#draft_grid{
-    width:99%;
-    height:99%;
-}
-*/
+
 #players{
     border:1px solid green;
     float:left;
@@ -34,7 +33,7 @@
 }
 
 #player_list_table {
-    width:100%;    
+    width:100%;  
 }
 
 #player_list_table tr:nth-child(even){
@@ -52,7 +51,6 @@
 tr[drafted="true"]{
     background-color:#4d4d4d;
     color:#b3b3b3;
-    /*text-decoration: line-through;*/
 }
 
 #teams_display{
@@ -66,13 +64,13 @@ tr[drafted="true"]{
     margin-bottom:20px;
     float:left;
     width:20%;
-    border-collapse: collapse;   
+    border-collapse: collapse;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
 }
 
 .postition_td{
     width:10%;
 }
 
-body{
-    font-family: PT Sans Narrow;
-}
