--- a/site/css/draft.css
+++ b/site/css/draft.css
@@ -26,13 +26,19 @@ padding:5px;
 #players{
     border:1px solid green;
     float:left;
-    height:85%;
+    max-height:85%;
     width:25%;
-    overflow: scroll;   
+     
 }
 
 #player_list_filter{
     margin: 5px;
+    max-height:14%;
+}
+
+#player_list{
+    max-height:84%;
+    overflow: scroll;
 }
 
 #player_list_table, td, th{
@@ -42,7 +48,7 @@ padding:5px;
 }
 
 #player_list_table {
-    width:100%;    
+    width:100%;
 }
 
 #player_list_table tr:nth-child(even){
