--- a/site/css/draft_helper.css
+++ b/site/css/draft_helper.css
@@ -1,7 +1,7 @@
 body{
     font-family: PT Sans Narrow;
     font-family: Ubuntu;
-    overflow: hidden;
+    /*overflow: hidden;*/
     background-color: #EFEFEF;
 }
 
@@ -70,7 +70,7 @@ body{
         background-color:#d9d9d9;
     }
 
-#teams_display{
+/*#teams_display{
     float:left;
     height:99%;
     width:73%;
@@ -91,7 +91,7 @@ body{
 
     .team_board tr:nth-child(even){
         background-color: #CAEBF2;
-    }
+    }*/
 
 .click_to_draft:hover{
     font-size: 1.1em;
