--- a/site/css/draft_helper.css
+++ b/site/css/draft_helper.css
@@ -1,7 +1,12 @@
-body{
+html, body {
+    font-family: Ubuntu;
+}
+
+
+/*Below is the old CSS*/
+/*body{
     font-family: PT Sans Narrow;
     font-family: Ubuntu;
-    /*overflow: hidden;*/
     background-color: #EFEFEF;
 }
 
@@ -17,7 +22,6 @@ body{
         height:100%;
         float:left;
         border-right:1px solid black;
-        /*text-align:center;*/
         }
     .menu_div_title{
         font-weight: bold;
@@ -31,7 +35,6 @@ body{
 }
 
 #players{
-    /*border:1px solid green;*/
     float:left;
     height:99%;
     width:25%;    
@@ -60,17 +63,11 @@ body{
         display: block;
     }
 
-    /*#player_list_table tbody{
-        display: block;
-        max-height: 84%;
-    }*/
-
-
     #player_list_table tr:nth-child(even){
         background-color:#d9d9d9;
     }
 
-/*#teams_display{
+#teams_display{
     float:left;
     height:99%;
     width:73%;
@@ -91,7 +88,7 @@ body{
 
     .team_board tr:nth-child(even){
         background-color: #CAEBF2;
-    }*/
+    }
 
 .click_to_draft:hover{
     font-size: 1.1em;
@@ -112,16 +109,12 @@ tr[drafted="true"]{
     width:10%;
 }
 
-body{
-
-}
-
 #undo_button, #set_keepers{
     height:30px;
     width:30px;
 }
 #undo_button:hover, #set_keepers:hover{
     cursor: pointer;
-}
+}*/
 
 
