--- a/site/Draft/draft_client.css
+++ b/site/Draft/draft_client.css
@@ -1,21 +1,18 @@
-#menu{
-    height:15vh;
+body{
+    height:100vh;
     width:100vw;
+}
+#menu{
+    height:15%;
     background-color:blue;
 }
-#content{
-    height:85vh;
-    width:100vw;
-}
 #left_gutter, #right_gutter{
-    height:100%;
-    width:15%;
+    height:85%;
     background-color:green;
     float:left;
 }
 #main{
-    height:100%;
-    width:70%;
+    height:85%;
     background-color: orange;
     float:left;
 }
