--- a/site/css/draft_helper.css
+++ b/site/css/draft_helper.css
@@ -34,6 +34,11 @@ body{
     overflow: auto;
     height: 70vh
 }
+
+#league_creator{
+    overflow: auto;
+    height: 100vh;
+}
 /*Below is the old CSS*/
 /*body{
     font-family: PT Sans Narrow;
